2009-04-06 19:07 +0200  Erik Hovland  <erik@hovland.org>  (b5cbd0dab863)

	* sendlib.c: Plug memory leaks in sendlib.c

2009-04-05 13:41 +0200  Rocco Rutte  <pdmef@gmx.net>  (5d393e716c51)

	* ChangeLog, init.h, sendlib.c: Backed out changeset 23c7b469ff20

	This requires more thought: if the user has -- in $sendmail, we need
	to add our arguments for 8BITMIME/DSN/etc. before it and not after.
	See #3168.

2009-04-05 11:55 +0200  Rocco Rutte  <pdmef@gmx.net>  (7b6f1302e60d)

	* doc/manual.xml.head: Manual: Make sure every rc command has a
	synopsis in its describing section

2009-04-05 11:54 +0200  Rocco Rutte  <pdmef@gmx.net>  (1b844544a160)

	* ChangeLog, doc/manual.xml.head: Manual: Fold consecutive
	<cmdsynopsis/> into just one

	This make it visually easier to spot what belongs together.

2009-04-05 09:09 +0200  Rocco Rutte  <pdmef@gmx.net>  (864b19c6829f)

	* doc/manual.xml.head: Manual: More entities and <quotes/> as
	appropriate

2009-04-04 16:23 +0200  Rocco Rutte  <pdmef@gmx.net>  (a4b635e96b30)

	* ChangeLog, doc/Makefile.am: Manual: Improve 'sortcheck' target

	Don't call up diff+pager if all is sorted and remove the temp files
	for diffing we created.

2009-04-04 15:37 +0200  Rocco Rutte  <pdmef@gmx.net>  (d4ea8e9a9024)

	* doc/gen-map-doc, doc/manual.xml.head, doc/manual.xml.tail: Manual:
	Capitalize headlines

2009-04-04 15:08 +0200  Rocco Rutte  <pdmef@gmx.net>  (6fd8d35891b0)

	* doc/manual.xml.head: Manual: Move section on mixmaster support to
	Optional Features

2009-04-04 15:02 +0200  Rocco Rutte  <pdmef@gmx.net>  (4d013dbd2a7d)

	* doc/manual.xml.head: Manual: Remove duplicate section on mailcap use
	from security chapter

	We already have a more detailed section on secure mailcap usage, so
	link to it.

2009-04-04 14:43 +0200  Rocco Rutte  <pdmef@gmx.net>  (e4c555e22ae4)

	* doc/manual.xml.head: Manual: Minor improvements and fixes

2009-04-04 14:28 +0200  Rocco Rutte  <pdmef@gmx.net>  (0c3d03bae08f)
